Fixed login bug which was causing the image in the header to move offscreen whenever a user clicked on the Password Field

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -85,6 +85,10 @@
     text-align: left;
   }
 
+.header {
+
+}
+
 .input-wrapper {
   height: 65px;
 }
@@ -177,6 +181,12 @@
     color: $black;
     display:block;
     margin:0 auto;
+  }
+
+  .login-main {
+    position: absolute;
+    top: 270px;
+    width: 100%;
   }
 
   .Login {
@@ -283,19 +293,11 @@
     height: auto;
   }
 
-  .container2 {
-    padding: 0px !important;
-    position: absolute;
-    top: 0px;
-    width:100%;
-  }
-
   .imgContainer {
     padding:0px !important;
     width: 100%;
     height: 280px;
     margin-bottom: 1px;
-    
   }
 
   .logoContainer {
